--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -113,6 +113,30 @@
     .addhelpdesk:hover::before{
       color: #fff;
     }
+    .td{
+      display: flex;
+      gap:20px;
+      align-items: center;
+
+    }
+    .td span{
+      content: '';
+      width:5px;
+      height:30px;
+      background: orange;
+    }
+    .td-td{
+      display: flex;
+      gap:20px;
+      align-items: center;
+
+    }
+    .td-td span{
+      content: '';
+      width:5px;
+      height:30px;
+      background:lightgreen;
+    }
   </style>
 </head>
 
