--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -79,6 +79,9 @@
     .nav-link.active {
       background-color: #5E6668 !important
     }
+    .mcu.active {
+      background-color: #fff !important
+    }
 
     .post:hover {
       color: black;
